# GDatabase

./: .gitignore  Cargo.toml  README.md  serviceaccount.json
src/: main.rs
src/routes/: data.rs
