[package]
name = "GDatabase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-sheets4 = "*"
serde = "^1.0"
serde_json = "^1.0"
tokio =  { version = "1.26.0", features = ["full"] }
hyper = "0.14.24"
hyper-rustls = "0.23.2"