[package]
name = "gdatabase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-sheets4 = "*"
tokio =  { version = "1.26.0", features = ["full"] }
hyper = "0.14.24"
hyper-rustls = "0.23.2"
serde_derive = "1.0"
serde = "^1.0"

[dependencies.rocket]
version = "0.5.0-rc.1"
default-features = false
features = ["json"]

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]